<resources>
    <string name="app_name">ColorNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--   Menu-->
    <string name="action_color_profile">color profile</string>
    <string name="sorting_by_date">date of creation</string>
    <string name="sorting_by_title">title</string>

    <string name="gray">gray</string>
    <string name="grayish_orange">grayish orange</string>
    <string name="green">green</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="title">title note</string>
    <string name="text">text note</string>
    <string name="btn_save">Save</string>

</resources>