<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.MainActivity">
    <item
        android:id="@+id/menuColorProfile"
        android:orderInCategory="100"
        android:title="@string/action_color_profile"

        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuGray"
                android:orderInCategory="100"
                android:title="@string/gray"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuGrayishOrange"
                android:orderInCategory="100"
                android:title="@string/grayish_orange"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuBlue"
                android:orderInCategory="100"
                android:title="@string/blue"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuGreen"
                android:orderInCategory="100"
                android:title="@string/green"
                app:showAsAction="never" />
            <item
                android:id="@+id/menuRed"
                android:orderInCategory="100"
                android:title="@string/red"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>